<?xml version="1.0"?>
<package format="2">
  <name>s3000_laser</name>
  <version>0.1.0</version>
  <description>ROS driver for the SICK S3000.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>
  <depend>std_srvs</depend>
</package>
